--- a/egov/egov-egf/src/main/resources/reports/templates/bankAdviceReport.jrxml
+++ b/egov/egov-egf/src/main/resources/reports/templates/bankAdviceReport.jrxml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="bankAdviceReport" pageWidth="595" pageHeight="842" columnWidth="495" leftMargin="50" rightMargin="50" topMargin="60" bottomMargin="60" isSummaryWithPageHeaderAndFooter="true" isFloatColumnFooter="true" uuid="e977129d-8063-4dc8-acc3-8e8fecf2dd1e">
-	<property name="ireport.zoom" value="1.366026910730141"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="bankAdviceReport" pageWidth="612" pageHeight="1008" columnWidth="512" leftMargin="50" rightMargin="50" topMargin="60" bottomMargin="60" isSummaryWithPageHeaderAndFooter="true" isFloatColumnFooter="true" uuid="e977129d-8063-4dc8-acc3-8e8fecf2dd1e">
+	<property name="ireport.zoom" value="1.6528925619834711"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="384"/>
+	<property name="ireport.y" value="672"/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -93,6 +102,11 @@
 	<parameter name="instrumentType" class="java.lang.String"/>
 	<parameter name="PEXReportDataSource" class="net.sf.jasperreports.engine.data.JRBeanCollectionDataSource"/>
 	<parameter name="totalAmountInWords" class="java.lang.String"/>
+	<parameter name="secondarySignatory" class="java.lang.String"/>
+	<parameter name="primarySignatory" class="java.lang.String"/>
+	<parameter name="headerImagePath" class="java.lang.String"/>
+	<parameter name="footerImagePath" class="java.lang.String"/>
+	<parameter name="backgroundImgPath" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -101,6 +115,15 @@
 	<field name="amount" class="java.math.BigDecimal"/>
 	<field name="ifscCode" class="java.lang.String"/>
 	<field name="bank" class="java.lang.String"/>
+	<background>
+		<band height="842">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
+			<image>
+				<reportElement x="0" y="191" width="512" height="460" uuid="d12dc640-e744-46c9-ab71-a86bd0020690"/>
+				<imageExpression><![CDATA[$P{backgroundImgPath}]]></imageExpression>
+			</image>
+		</band>
+	</background>
 	<title>
 		<band height="233">
 			<staticText>
@@ -109,46 +132,46 @@
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<text><![CDATA[To
-The Manager,
+      The Manager,
 ]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="0" y="90" width="198" height="17" uuid="284bd69b-eb27-4460-bfa3-8ac393d8f3d5"/>
+				<reportElement x="20" y="90" width="198" height="17" uuid="284bd69b-eb27-4460-bfa3-8ac393d8f3d5"/>
 				<textElement>
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{bankName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="107" width="198" height="21" uuid="4ef74e37-30d1-4dc5-99fc-6749540dd79a"/>
+				<reportElement x="20" y="107" width="198" height="21" uuid="4ef74e37-30d1-4dc5-99fc-6749540dd79a"/>
 				<textElement>
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{branchName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="37" y="127" width="267" height="16" uuid="9fd252ac-6668-437d-a6b7-d66ae1511cda"/>
+				<reportElement x="20" y="128" width="247" height="16" uuid="9fd252ac-6668-437d-a6b7-d66ae1511cda"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{chequeNumber}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="322" y="118" width="63" height="27" uuid="823ad213-e4cb-4661-b404-bc18dcdec7a8"/>
+				<reportElement x="337" y="117" width="63" height="27" uuid="823ad213-e4cb-4661-b404-bc18dcdec7a8"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<text><![CDATA[Dated : ]]></text>
 			</staticText>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement x="0" y="204" width="495" height="29" uuid="c6427eb5-71f3-426b-bfc4-65ad65c9e907"/>
-				<textElement textAlignment="Justified" verticalAlignment="Middle">
-					<font fontName="Verdana" size="12"/>
+			<textField isBlankWhenNull="true">
+				<reportElement stretchType="RelativeToTallestObject" x="50" y="185" width="452" height="47" uuid="c6427eb5-71f3-426b-bfc4-65ad65c9e907"/>
+				<textElement textAlignment="Justified" verticalAlignment="Top">
+					<font fontName="Verdana" size="11"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{letterContext}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="385" y="118" width="110" height="27" uuid="881a8b92-90ec-41ff-af26-e3b687f15015"/>
+				<reportElement x="400" y="117" width="110" height="27" uuid="881a8b92-90ec-41ff-af26-e3b687f15015"/>
 				<box leftPadding="2"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="Verdana" size="12"/>
@@ -156,57 +179,60 @@ The Manager,
 				<textFieldExpression><![CDATA[$P{chequeDate}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="161" width="25" height="21" uuid="485485da-0fc3-48e8-93f9-d680be2a4d0e"/>
-				<textElement>
-					<font fontName="Verdana" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA["Sir,"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="25" y="182" width="470" height="20" uuid="ffb4d490-8804-4d58-b91d-53855a199fd7"/>
+				<reportElement x="0" y="167" width="470" height="15" uuid="ffb4d490-8804-4d58-b91d-53855a199fd7"/>
 				<textElement>
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA["SUB:   Transfer of Funds"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="1" y="17" width="494" height="26" uuid="9d65f83b-8dd5-4399-b9d0-0e6185a1a499"/>
-				<textElement textAlignment="Center">
-					<font fontName="Verdana" size="16" isBold="true" isUnderline="true"/>
-				</textElement>
-				<text><![CDATA[MUNICIPAL CORPORATION OF CHANDIGARH]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="37" y="143" width="42" height="18" uuid="b948cd40-2d89-48bf-847c-c752efa3301e"/>
+				<reportElement x="20" y="144" width="39" height="18" uuid="b948cd40-2d89-48bf-847c-c752efa3301e"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<text><![CDATA[Date : ]]></text>
 			</staticText>
+			<image>
+				<reportElement x="0" y="-20" width="510" height="77" uuid="a5b81982-690d-44d1-9898-d53cba8c6d1f"/>
+				<imageExpression><![CDATA[$P{headerImagePath}]]></imageExpression>
+			</image>
 		</band>
 	</title>
+	<pageHeader>
+		<band height="76">
+			<printWhenExpression><![CDATA[$V{PAGE_NUMBER}!=1]]></printWhenExpression>
+			<image>
+				<reportElement x="0" y="-1" width="510" height="77" uuid="2ecf100f-f89b-4d6a-bf0d-9acff8cb56b2"/>
+				<imageExpression><![CDATA[$P{headerImagePath}]]></imageExpression>
+			</image>
+		</band>
+	</pageHeader>
 	<pageFooter>
-		<band height="22">
+		<band height="50">
 			<textField>
-				<reportElement x="465" y="0" width="12" height="20" uuid="18dbb2e4-1d24-4e38-b3c9-7b34ca8977ac"/>
+				<reportElement x="490" y="25" width="12" height="20" uuid="18dbb2e4-1d24-4e38-b3c9-7b34ca8977ac"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+"/"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report" isBlankWhenNull="true">
-				<reportElement x="477" y="0" width="7" height="20" uuid="71bf00d6-56af-4857-9526-3f6ccc7bc8a2"/>
+				<reportElement x="502" y="25" width="7" height="20" uuid="71bf00d6-56af-4857-9526-3f6ccc7bc8a2"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
+			<image>
+				<reportElement x="0" y="0" width="480" height="50" uuid="86d803f3-02c5-4405-875e-2ef14ffd17d3"/>
+				<imageExpression><![CDATA[$P{footerImagePath}]]></imageExpression>
+			</image>
 		</band>
 	</pageFooter>
 	<summary>
 		<band height="340">
 			<componentElement>
-				<reportElement key="table" style="table" positionType="Float" isPrintRepeatedValues="false" x="1" y="11" width="469" height="76" uuid="de00f23e-238d-4126-a9d1-363daf39378d"/>
+				<reportElement key="table" style="table" positionType="Float" isPrintRepeatedValues="false" x="1" y="11" width="493" height="76" uuid="de00f23e-238d-4126-a9d1-363daf39378d"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 					<datasetRun subDataset="Table Dataset 1" uuid="50f585b4-b227-4e8e-b6c4-dd979c0524ef">
 						<dataSourceExpression><![CDATA[$P{PEXReportDataSource}]]></dataSourceExpression>
 					</datasetRun>
 					<jr:column width="36" uuid="fe63f07e-4780-4f3e-871d-6832fb5b1266">
-						<jr:tableFooter height="21" rowSpan="1"/>
+						<jr:tableFooter height="18" rowSpan="1"/>
 						<jr:columnHeader style="table_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement x="0" y="0" width="36" height="30" uuid="ea240760-09c1-4644-9bf9-9836e93d6018"/>
@@ -225,7 +251,7 @@ The Manager,
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="43" rowSpan="1">
-							<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+							<textField isBlankWhenNull="true">
 								<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="36" height="43" isPrintWhenDetailOverflows="true" uuid="93520df1-df1b-4750-b5e5-e91852866cd7"/>
 								<box>
 									<pen lineWidth="0.5"/>
@@ -242,7 +268,7 @@ The Manager,
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="85" uuid="74120a0a-62b2-44e1-bdeb-8313e2184600">
-						<jr:tableFooter height="21" rowSpan="1"/>
+						<jr:tableFooter height="18" rowSpan="1"/>
 						<jr:columnHeader style="table_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement stretchType="RelativeToBandHeight" x="0" y="0" width="85" height="30" isPrintWhenDetailOverflows="true" uuid="41e8fe56-b068-4a91-b08b-2dbc0ee51623"/>
@@ -261,7 +287,7 @@ The Manager,
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="43" rowSpan="1">
-							<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+							<textField isBlankWhenNull="true">
 								<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="85" height="43" isPrintWhenDetailOverflows="true" uuid="e22ce98f-126f-413d-92da-4d3934c43848"/>
 								<box>
 									<pen lineWidth="0.5"/>
@@ -278,7 +304,7 @@ The Manager,
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="118" uuid="fe1b7eee-8265-4685-abe6-90055fde39db">
-						<jr:tableFooter height="21" rowSpan="1"/>
+						<jr:tableFooter height="18" rowSpan="1"/>
 						<jr:columnHeader style="table_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement x="0" y="0" width="118" height="30" uuid="0b914d6f-2c94-42b1-a418-bf5b0e3fcc65"/>
@@ -297,8 +323,8 @@ The Manager,
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="43" rowSpan="1">
-							<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-								<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="118" height="43" isPrintWhenDetailOverflows="true" uuid="bc25f7a0-82f5-4110-a84d-88d91fc9a43d"/>
+							<textField isBlankWhenNull="true">
+								<reportElement style="table_TD" positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="118" height="43" isPrintWhenDetailOverflows="true" backcolor="rgba(255, 255, 255, 0.0)" uuid="bc25f7a0-82f5-4110-a84d-88d91fc9a43d"/>
 								<box>
 									<pen lineWidth="0.5"/>
 									<topPen lineWidth="0.5"/>
@@ -314,7 +340,7 @@ The Manager,
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="76" uuid="a328d947-d6cf-4b99-8b11-ef5c5b4b6d04">
-						<jr:tableFooter height="21" rowSpan="1"/>
+						<jr:tableFooter height="18" rowSpan="1"/>
 						<jr:columnHeader style="table_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement positionType="Float" x="0" y="0" width="76" height="30" uuid="bb5892a0-b9ec-4f18-9173-e0719065994e"/>
@@ -333,7 +359,7 @@ The Manager,
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="43" rowSpan="1">
-							<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+							<textField isBlankWhenNull="true">
 								<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="76" height="43" isPrintWhenDetailOverflows="true" uuid="7e5ad8ce-6054-4e3e-9766-7a1c864415a5"/>
 								<box>
 									<pen lineWidth="0.5"/>
@@ -350,9 +376,9 @@ The Manager,
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="90" uuid="755d47a4-c9a8-4d4b-80d5-787c626c0800">
-						<jr:tableFooter height="21" rowSpan="1">
+						<jr:tableFooter height="18" rowSpan="1">
 							<staticText>
-								<reportElement style="table 1_CH" x="0" y="0" width="90" height="20" uuid="f7d4032e-a7ac-4861-ae49-ecc5df153a52"/>
+								<reportElement style="table 1_CH" x="0" y="0" width="90" height="18" uuid="f7d4032e-a7ac-4861-ae49-ecc5df153a52"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Verdana" size="11"/>
 								</textElement>
@@ -377,7 +403,7 @@ The Manager,
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="43" rowSpan="1">
-							<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+							<textField isBlankWhenNull="true">
 								<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="90" height="43" isPrintWhenDetailOverflows="true" uuid="572f2807-11b5-4673-9d8c-332b776121ca"/>
 								<box>
 									<pen lineWidth="0.5"/>
@@ -394,9 +420,9 @@ The Manager,
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="92" uuid="ac0ed524-5ffc-4826-a767-f127b8458d77">
-						<jr:tableFooter height="21" rowSpan="1">
+						<jr:tableFooter height="18" rowSpan="1">
 							<textField pattern="###0.00;-###0.00">
-								<reportElement style="table 1_CH" x="0" y="0" width="92" height="20" uuid="aca291c2-610a-4ff3-8434-4d13c33416a4"/>
+								<reportElement style="table 1_CH" x="0" y="0" width="92" height="18" uuid="aca291c2-610a-4ff3-8434-4d13c33416a4"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Verdana" size="11"/>
 								</textElement>
@@ -421,7 +447,7 @@ The Manager,
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="43" rowSpan="1">
-							<textField isStretchWithOverflow="true" pattern="###0.00" isBlankWhenNull="true">
+							<textField pattern="###0.00" isBlankWhenNull="true">
 								<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="92" height="43" isPrintWhenDetailOverflows="true" uuid="8879904a-72cd-4427-9301-83f617cbfc9b"/>
 								<box>
 									<pen lineWidth="0.5"/>
@@ -447,23 +473,35 @@ The Manager,
 				<textFieldExpression><![CDATA[$P{totalAmountInWords}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement positionType="Float" x="2" y="159" width="139" height="74" uuid="b689bd27-2faf-4a98-bb7a-45654a2c1553"/>
-				<textElement textAlignment="Left" verticalAlignment="Bottom" markup="none">
+				<reportElement positionType="Float" x="2" y="190" width="148" height="43" uuid="b689bd27-2faf-4a98-bb7a-45654a2c1553"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" markup="none">
 					<font fontName="Verdana" size="12" isBold="false" isStrikeThrough="false" isPdfEmbedded="true"/>
 				</textElement>
-				<text><![CDATA[Chief Accounts Officer,
-Municipal Corporation,
+				<text><![CDATA[Municipal Corporation,
 Chandigarh]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="Float" x="316" y="159" width="167" height="74" uuid="59048ccb-c11f-4630-ac69-afaf1f0e467d"/>
-				<textElement textAlignment="Left" verticalAlignment="Bottom" markup="none">
+				<reportElement positionType="Float" x="320" y="190" width="150" height="44" uuid="59048ccb-c11f-4630-ac69-afaf1f0e467d"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" markup="none">
 					<font fontName="Verdana" size="12" isBold="false" isStrikeThrough="false" isPdfEmbedded="true"/>
 				</textElement>
-				<text><![CDATA[Additional Commissioner,
-Municipal Corporation,
+				<text><![CDATA[Municipal Corporation,
 Chandigarh]]></text>
 			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement positionType="Float" x="2" y="159" width="231" height="32" uuid="504cfe65-2000-40ec-9d07-2dffba38cffa"/>
+				<textElement verticalAlignment="Bottom">
+					<font fontName="Verdana" size="11"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{secondarySignatory}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement positionType="Float" x="320" y="159" width="190" height="32" uuid="0049162e-c792-4988-ac32-550fd618cada"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font fontName="Verdana" size="11"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{primarySignatory}]]></textFieldExpression>
+			</textField>
 		</band>
 	</summary>
 </jasperReport>
