--- a/egov/egov-egf/src/main/resources/reports/templates/bankAdviceReport3.jrxml
+++ b/egov/egov-egf/src/main/resources/reports/templates/bankAdviceReport3.jrxml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="bankAdviceReport" pageWidth="595" pageHeight="842" columnWidth="495" leftMargin="50" rightMargin="50" topMargin="60" bottomMargin="60" isSummaryWithPageHeaderAndFooter="true" isFloatColumnFooter="true" uuid="e977129d-8063-4dc8-acc3-8e8fecf2dd1e">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="bankAdviceReport" pageWidth="612" pageHeight="1008" columnWidth="512" leftMargin="50" rightMargin="50" topMargin="60" bottomMargin="60" isSummaryWithPageHeaderAndFooter="true" isFloatColumnFooter="true" uuid="e977129d-8063-4dc8-acc3-8e8fecf2dd1e">
 	<property name="ireport.zoom" value="1.652892561983471"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="593"/>
+	<property name="ireport.y" value="353"/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -73,9 +82,23 @@
 	<parameter name="instrumentType" class="java.lang.String"/>
 	<parameter name="totalAmountInWords" class="java.lang.String"/>
 	<parameter name="mainParameter" class="java.lang.String"/>
+	<parameter name="primarySignatory" class="java.lang.String"/>
+	<parameter name="secondarySignatory" class="java.lang.String"/>
+	<parameter name="headerImagePath" class="java.lang.String"/>
+	<parameter name="footerImagePath" class="java.lang.String"/>
+	<parameter name="backgroundImgPath" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[select 1 from dual]]>
 	</queryString>
+	<background>
+		<band height="722">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
+			<image>
+				<reportElement x="0" y="116" width="512" height="490" uuid="c2218aaa-2a04-4b3a-9ac9-064f73a842f5"/>
+				<imageExpression><![CDATA[$P{backgroundImgPath}]]></imageExpression>
+			</image>
+		</band>
+	</background>
 	<title>
 		<band height="246">
 			<staticText>
@@ -84,46 +107,46 @@
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<text><![CDATA[To
-The Manager,
+    The Manager,
 ]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="0" y="90" width="198" height="17" uuid="284bd69b-eb27-4460-bfa3-8ac393d8f3d5"/>
+				<reportElement x="20" y="90" width="198" height="17" uuid="284bd69b-eb27-4460-bfa3-8ac393d8f3d5"/>
 				<textElement>
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{bankName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="107" width="198" height="21" uuid="4ef74e37-30d1-4dc5-99fc-6749540dd79a"/>
+				<reportElement x="20" y="107" width="198" height="21" uuid="4ef74e37-30d1-4dc5-99fc-6749540dd79a"/>
 				<textElement>
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{branchName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="37" y="127" width="263" height="16" uuid="9fd252ac-6668-437d-a6b7-d66ae1511cda"/>
+				<reportElement x="0" y="128" width="263" height="16" uuid="9fd252ac-6668-437d-a6b7-d66ae1511cda"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{chequeNumber}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="322" y="118" width="63" height="27" uuid="823ad213-e4cb-4661-b404-bc18dcdec7a8"/>
+				<reportElement x="334" y="118" width="63" height="27" uuid="823ad213-e4cb-4661-b404-bc18dcdec7a8"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<text><![CDATA[Dated : ]]></text>
 			</staticText>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement x="0" y="204" width="495" height="29" uuid="c6427eb5-71f3-426b-bfc4-65ad65c9e907"/>
-				<textElement textAlignment="Justified" verticalAlignment="Middle">
-					<font fontName="Verdana" size="12"/>
+			<textField isBlankWhenNull="true">
+				<reportElement x="40" y="182" width="467" height="64" uuid="c6427eb5-71f3-426b-bfc4-65ad65c9e907"/>
+				<textElement textAlignment="Justified" verticalAlignment="Top">
+					<font fontName="Verdana" size="11"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{letterContext}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="385" y="118" width="110" height="27" uuid="881a8b92-90ec-41ff-af26-e3b687f15015"/>
+				<reportElement x="397" y="118" width="110" height="27" uuid="881a8b92-90ec-41ff-af26-e3b687f15015"/>
 				<box leftPadding="2"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="Verdana" size="12"/>
@@ -131,74 +154,91 @@ The Manager,
 				<textFieldExpression><![CDATA[$P{chequeDate}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="161" width="25" height="21" uuid="485485da-0fc3-48e8-93f9-d680be2a4d0e"/>
-				<textElement>
-					<font fontName="Verdana" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA["Sir,"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="25" y="182" width="470" height="20" uuid="ffb4d490-8804-4d58-b91d-53855a199fd7"/>
+				<reportElement x="0" y="164" width="470" height="15" uuid="ffb4d490-8804-4d58-b91d-53855a199fd7"/>
 				<textElement>
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA["SUB:   Transfer of Funds"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="1" y="17" width="494" height="26" uuid="9d65f83b-8dd5-4399-b9d0-0e6185a1a499"/>
-				<textElement textAlignment="Center">
-					<font fontName="Verdana" size="16" isBold="true" isUnderline="true"/>
-				</textElement>
-				<text><![CDATA[MUNICIPAL CORPORATION OF CHANDIGARH]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="37" y="143" width="42" height="18" uuid="b948cd40-2d89-48bf-847c-c752efa3301e"/>
+				<reportElement x="-2" y="144" width="42" height="18" uuid="b948cd40-2d89-48bf-847c-c752efa3301e"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Verdana" size="12"/>
 				</textElement>
 				<text><![CDATA[Date : ]]></text>
 			</staticText>
+			<image>
+				<reportElement x="0" y="-20" width="512" height="70" uuid="62111010-ab4a-4ec7-84c1-5cc976000d8e"/>
+				<imageExpression><![CDATA[$P{headerImagePath}]]></imageExpression>
+			</image>
 		</band>
 	</title>
+	<pageHeader>
+		<band height="70">
+			<printWhenExpression><![CDATA[$V{PAGE_NUMBER}!=1]]></printWhenExpression>
+			<image>
+				<reportElement x="0" y="0" width="507" height="70" uuid="779dc82c-87c2-437d-b9eb-34cac8b9afe0"/>
+				<imageExpression><![CDATA[$P{headerImagePath}]]></imageExpression>
+			</image>
+		</band>
+	</pageHeader>
 	<pageFooter>
-		<band height="23">
+		<band height="45">
 			<textField>
-				<reportElement x="461" y="1" width="9" height="20" uuid="b437b46c-503d-48bb-b3a7-675d126670c7"/>
+				<reportElement x="492" y="20" width="9" height="20" uuid="b437b46c-503d-48bb-b3a7-675d126670c7"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+"/"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report" isBlankWhenNull="true">
-				<reportElement x="470" y="1" width="7" height="20" uuid="b8f22503-41d9-4e79-99eb-eac25be9fb4b"/>
+				<reportElement x="501" y="20" width="7" height="20" uuid="b8f22503-41d9-4e79-99eb-eac25be9fb4b"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
+			<image>
+				<reportElement x="2" y="3" width="483" height="39" uuid="103feedd-b24b-4191-a9f3-c9a0d82e0746"/>
+				<imageExpression><![CDATA[$P{footerImagePath}]]></imageExpression>
+			</image>
 		</band>
 	</pageFooter>
 	<lastPageFooter>
 		<band height="284">
 			<staticText>
-				<reportElement positionType="Float" x="8" y="57" width="139" height="49" uuid="b689bd27-2faf-4a98-bb7a-45654a2c1553"/>
-				<textElement textAlignment="Left" verticalAlignment="Bottom" markup="none">
+				<reportElement positionType="Float" x="8" y="70" width="139" height="36" uuid="f8ee65f5-8611-4006-bd30-c46298dd83a5"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" markup="none">
 					<font fontName="Verdana" size="11" isBold="false" isStrikeThrough="false" isPdfEmbedded="true"/>
 				</textElement>
-				<text><![CDATA[Chief Accounts Officer,
-Municipal Corporation,
-Chandigarh]]></text>
+				<text><![CDATA[Municipal Corporation, Chandigarh]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="Float" x="322" y="57" width="167" height="49" uuid="59048ccb-c11f-4630-ac69-afaf1f0e467d"/>
-				<textElement textAlignment="Left" verticalAlignment="Bottom" markup="none">
+				<reportElement positionType="Float" x="310" y="70" width="131" height="36" uuid="13a71011-c6e3-4d07-8b12-890a685381fe"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" markup="styled">
 					<font fontName="Verdana" size="11" isBold="false" isStrikeThrough="false" isPdfEmbedded="true"/>
 				</textElement>
-				<text><![CDATA[Additional Commissioner,
-Municipal Corporation,
-Chandigarh]]></text>
+				<text><![CDATA[Municipal Corporation, Chandigarh]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="458" y="244" width="12" height="20" uuid="b2da2db7-6240-44f2-aee9-f422b53090ac"/>
+				<reportElement x="488" y="239" width="12" height="20" uuid="b2da2db7-6240-44f2-aee9-f422b53090ac"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+"/"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report" isBlankWhenNull="true">
-				<reportElement x="471" y="244" width="7" height="20" uuid="dc3cd0eb-5cb4-4a93-b99d-40ac876f67ab"/>
+				<reportElement x="501" y="239" width="7" height="20" uuid="dc3cd0eb-5cb4-4a93-b99d-40ac876f67ab"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<image>
+				<reportElement x="2" y="230" width="483" height="39" uuid="48920241-a39e-4e21-8289-197adc2e4725"/>
+				<imageExpression><![CDATA[$P{footerImagePath}]]></imageExpression>
+			</image>
+			<textField>
+				<reportElement x="8" y="44" width="255" height="26" uuid="201a98d9-d080-4a74-bf03-1fc7648ddbee"/>
+				<textElement verticalAlignment="Bottom">
+					<font fontName="Verdana"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{secondarySignatory}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="310" y="44" width="192" height="24" uuid="1e3ffc3c-1ac7-4654-abb9-ec451184cb4c"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font fontName="Verdana"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{primarySignatory}]]></textFieldExpression>
 			</textField>
 		</band>
 	</lastPageFooter>
